--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
-      body {
-        background-color: #67ff41;
+body {
+        background-color: #41ffe6;
         font-family: "Comic Sans MS", sans-serif;
         line-height: 1.2;
         text-align: center;
@@ -35,27 +35,27 @@
         position: absolute;
         left: 0;
         right: 0;
-        background: #e2e971;
+        background: #28f1ff;
         text-align: left;
         top: 0;
       }
       .caption.bottom {
         bottom: 0;
         top:auto;
-        border-top: 2px solid black;
+        border-top: 2px solid rgb(41, 255, 255);
       }
       .caption.top {
         top: 0;
         border-bottom: 2px solid black;
       }
       .speech {
-        width: 40%;
-        border-radius:50%;
+        width: 50%;
+        border-radius:60%;
         border: 2px solid black;
         margin: 0;
         position: absolute;
         z-index: 1;
-        background: rgb(255, 255, 255) ;
+        background: rgb(45, 248, 255) ;
         padding: 20px;
         top: -15px;
         text-align: center;
@@ -68,7 +68,7 @@
         bottom: -11px;
         content: "";
         display: block;
-        left: 50%;
+        left: 850%;
         margin-left:-14px;
         position: absolute;
         width: 0;
@@ -80,7 +80,7 @@
         bottom: -15px;
         content: "";
         display: block;
-        left: 50%;
+        left: 44%;
         margin-left:-17px;
         position: absolute;
         width: 0;
